force-app/src/objects/EventApi__Registration_Item__c.object
<CustomObject>
    <description>Registration Items store the various products and break-out sessions for an Attendee.</description>
    <fields>
        <fullName>EventApi__Attendee__c</fullName>
        <description>** Required ** Master-detail link to the related Attendee.</description>
        <inlineHelpText>** Required ** Master-detail link to the related Attendee.</inlineHelpText>
        <label>Attendee</label>
        <referenceTo>EventApi__Attendee__c</referenceTo>
        <relationshipLabel>Registration Items</relationshipLabel>
        <relationshipName>Registration_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EventApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Required Override ** Link to related Business Group. Derived from User Preferences if not defined on record creation.</description>
        <inlineHelpText>** System Calculated Required Override ** Link to related Business Group. Derived from User Preferences if not defined on record creation.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Registration Items</relationshipLabel>
        <relationshipName>Registration_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Date__c</fullName>
        <description>** System Calculated ** The schedule date.</description>
        <formula>DATEVALUE( EventApi__Schedule_Item__r.EventApi__Start_Date_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** The schedule date.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventApi__Discount__c</fullName>
        <description>** System Calculated ** Item list price - sale price. (Disregard this field if the item is a tax)</description>
        <formula>EventApi__List_Price__c - EventApi__Sale_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** Item list price - sale price. (Disregard this field if the item is a tax)</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__End_Time__c</fullName>
        <description>** System Calculated ** The scheduled end time.</description>
        <formula>EventApi__Schedule_Item__r.EventApi__Session_End_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** The scheduled end time.</inlineHelpText>
        <label>End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Checked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Registration Item and correspondent Attendee is considered to be/was in attendance for the Event. Default unchecked.</description>
        <label>Is Checked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Primary__c</fullName>
        <description>** System Calculated ** Indicates that the registration item is the attendees primary ticket type.</description>
        <formula>IF (OR(EventApi__Attendee__r.EventApi__Ticket_Type__c == EventApi__Ticket_Type__c, EventApi__Ticket_Type__r.EventApi__Event__c != null &amp;&amp; EventApi__Schedule_Item__c  == null), true, false)</formula>
        <inlineHelpText>** System Calculated ** Indicates that the registration item is the attendees primary ticket type.</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Registration item class.</description>
        <inlineHelpText>** System Calculated ** Registration item class.</inlineHelpText>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Registration Items</relationshipLabel>
        <relationshipName>Registration_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the item purchased.</description>
        <inlineHelpText>Link to the item purchased.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Registration Items</relationshipLabel>
        <relationshipName>Registration_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Line_Description__c</fullName>
        <description>** System Calculated ** Derived from the parent sales order line.</description>
        <inlineHelpText>** System Calculated ** Derived from the parent sales order line.</inlineHelpText>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__List_Price__c</fullName>
        <description>** System Calculated ** The registration item&apos;s list price.</description>
        <formula>EventApi__Item__r.OrderApi__Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** The registration item&apos;s list price.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Price_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated ** Derived from the parent sales order line.</description>
        <inlineHelpText>** System Calculated ** Derived from the parent sales order line.</inlineHelpText>
        <label>Price Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Price_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** The price rule applied when the attendee purchased the registration item.</description>
        <inlineHelpText>** System Calculated ** The price rule applied when the attendee purchased the registration item.</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>OrderApi__Price_Rule__c</referenceTo>
        <relationshipLabel>Registration Items</relationshipLabel>
        <relationshipName>Registration_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The quantity sold.</description>
        <inlineHelpText>The quantity sold.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to related &quot;Parent Registration Item&quot;.</description>
        <inlineHelpText>Links to related &quot;Parent Registration Item&quot;.</inlineHelpText>
        <label>Registration Item</label>
        <referenceTo>EventApi__Registration_Item__c</referenceTo>
        <relationshipLabel>Registration Items</relationshipLabel>
        <relationshipName>Registration_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Sale_Price__c</fullName>
        <description>** System Calculated ** The sale price per unit for the registration item.</description>
        <inlineHelpText>** System Calculated ** The sale price per unit for the registration item.</inlineHelpText>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the source sales order line that created the registration item.</description>
        <inlineHelpText>Links to the source sales order line that created the registration item.</inlineHelpText>
        <label>Sales Order Line (Source)</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Registration Items</relationshipLabel>
        <relationshipName>Registration_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Sales_Order_Number__c</fullName>
        <description>** System Calculated ** The sales order number.</description>
        <formula>EventApi__Sales_Order__r.Name</formula>
        <inlineHelpText>** System Calculated ** The sales order number.</inlineHelpText>
        <label>Sales Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the source sales order that created the registration item.</description>
        <inlineHelpText>Links to the source sales order that created the registration item.</inlineHelpText>
        <label>Sales Order (Source)</label>
        <referenceTo>OrderApi__Sales_Order__c</referenceTo>
        <relationshipLabel>Registration Items</relationshipLabel>
        <relationshipName>Registration_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Schedule_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related schedule item.</description>
        <inlineHelpText>Link to the related schedule item.</inlineHelpText>
        <label>Schedule Item</label>
        <referenceTo>EventApi__Schedule_Item__c</referenceTo>
        <relationshipLabel>Registered Attendees</relationshipLabel>
        <relationshipName>Registration_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Start_Time__c</fullName>
        <description>** System Calculated ** The scheduled start time.</description>
        <formula>EventApi__Schedule_Item__r.EventApi__Session_Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** The scheduled start time.</inlineHelpText>
        <label>Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Status__c</fullName>
        <description>** Required ** The current status of the Attendee Registration. Defaults to &quot;Registered&quot;.</description>
        <inlineHelpText>** Required ** The current status of the Attendee Registration. Defaults to &quot;Registered&quot;.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                    <default>true</default>
                    <label>Invited</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Subtotal__c</fullName>
        <description>** System Calculated ** Quantity * Sale Price.</description>
        <formula>EventApi__Quantity__c *  EventApi__Sale_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** Quantity * Sale Price.</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Ticket_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related Ticket Type.</description>
        <inlineHelpText>Link to the related Ticket Type.</inlineHelpText>
        <label>Ticket Type</label>
        <referenceTo>EventApi__Ticket_Type__c</referenceTo>
        <relationshipLabel>Registration Items</relationshipLabel>
        <relationshipName>Registration_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Total__c</fullName>
        <description>** System Calculated ** The total price for the registration item.</description>
        <inlineHelpText>** System Calculated ** The total price for the registration item.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Transaction_Date__c</fullName>
        <description>** System Calculated ** The date the sales order was posted.</description>
        <formula>EventApi__Sales_Order__r.OrderApi__Posted_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>** System Calculated ** The date the sales order was posted.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventApi__Transaction_Type__c</fullName>
        <description>** System Calculated ** The transaction type, either &quot;Invoice&quot; or &quot;Receipt&quot;.</description>
        <formula>TEXT(EventApi__Sales_Order__r.OrderApi__Posting_Entity__c)</formula>
        <inlineHelpText>** System Calculated ** The transaction type, either &quot;Invoice&quot; or &quot;Receipt&quot;.</inlineHelpText>
        <label>Transaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Transfer_Contact_Email__c</fullName>
        <description>** Conditionally Required ** The email address for the contact the registration item is being transferred to. Required for transfer.</description>
        <inlineHelpText>** Conditionally Required ** The email address for the contact the registration item is being transferred to. Required for transfer.</inlineHelpText>
        <label>Transfer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EventApi__Transfer_Contact_Name__c</fullName>
        <description>** Conditionally Required ** The name of the contact that the registration item is being transfered to. Required for transfer.</description>
        <inlineHelpText>** Conditionally Required ** The name of the contact that the registration item is being transfered to. Required for transfer.</inlineHelpText>
        <label>Transfer Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Transfer_Fee__c</fullName>
        <description>Registration items may be enabled for transfer depending on your event configurations. If the registration item is transfered the appropriate fees will be defined in this field.</description>
        <inlineHelpText>Registration items may be enabled for transfer depending on your event configurations. If the registration item is transfered the appropriate fees will be defined in this field.</inlineHelpText>
        <label>Transfer Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box to transfer the registration item to another Attendee.</description>
        <inlineHelpText>Check the box to transfer the registration item to another Attendee.</inlineHelpText>
        <label>Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTE__Primary_Group_Ticket_Registration_Item__c</fullName>
        <description>**System Calculated** Primary registration item id of group ticket type guest attendees.</description>
        <inlineHelpText>**System Calculated** Primary registration item id of group ticket type guest attendees.</inlineHelpText>
        <label>SYSTEM</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileApi__Attendee_id__c</fullName>
        <description>Holds the attendee id from the lookup Attendee.</description>
        <formula>EventApi__Attendee__r.MobileApi__Attendee_Id__c</formula>
        <inlineHelpText>Holds the attendee id from the lookup Attendee.</inlineHelpText>
        <label>Attendee ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobileApi__Guide__c</fullName>
        <formula>EventApi__Attendee__r.MobileApi__Guide__c</formula>
        <label>Guide ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobileApi__Name__c</fullName>
        <description>Holds the name of the Registration Item.</description>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileApi__Registration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Registration ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MobileApi__Schedule_Item_id__c</fullName>
        <description>Holds the session id from the schedule item lookup.</description>
        <formula>EventApi__Schedule_Item__r.MobileApi__Session_Id__c</formula>
        <inlineHelpText>Holds the session id from the schedule item lookup.</inlineHelpText>
        <label>Schedule Item ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Registration Item</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Registration Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>